# django-auditlog

./: .gitignore  MANIFEST.in  README.md  requirements.txt  settings.py  setup.cfg  setup.py
.github/: django.yml
.github/workflows/: django.yml
auditlog/: admin.py  apps.py  model_admin.py  models.py  signals.py  tests.py
auditlog/migrations/: 0001_initial.py  0002_alter_auditlog_principal.py
