[metadata]
name = django-auditlog
version = 0.1
description = A Django app to save logs about everything that happens to objects
long_description = file: README.md
author = Mateus Silva
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires = Django >= 4.0
